force-app/main/default/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Existing_Aus_disability_support__c</fullName>
        <inlineHelpText>Whether or not the applicant has registered for disability support in an Australian tertiary institution in the last 5 years?</inlineHelpText>
        <label>Existing Australian disability support?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Reference_Id__c</fullName>
        <description>External Id to connect Agentportal, IDP to CRM</description>
        <label>External Reference Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <description>This is used to capture the application fee amount. The amount is determined by the metadata.</description>
        <label>Application Processing Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Payment_Mode__c</fullName>
        <description>This is to capture the application fee payment mode.</description>
        <label>Application Processing Fee Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>Application Fee Waiver Code</fullName>
                </value>
                <value>
                    <fullName>Western Union</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>COVID-19 Waiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Processing Fee Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_Waiver_Code__c</fullName>
        <description>This is to capture the waiver code used to waive the application fee.</description>
        <label>Application Processing Fee Waiver Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Waiver_Redeemed__c</fullName>
        <description>Indicates if the Waiver code has been redeemed for Application fees</description>
        <label>Processing Fee Waiver Redeemed</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>a checkbox to determine whether the Application is from the my.app portal or from Callista migration.</description>
        <inlineHelpText>a checkbox to determine whether the Application is from the my.app portal or from Callista migration.</inlineHelpText>
        <label>From Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Furthest_Progress__c</fullName>
        <description>Furthest progress of the application, values will be the same as Submission Progress</description>
        <label>Furthest Progress</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GR_Callista_Document_Submission_Date__c</fullName>
        <description>Trigger to initiate HDR Integration soon after documents are submitted - will be set to System.now() post doc submission</description>
        <label>GR Callista Document Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GTE_Decision__c</fullName>
        <label>GTE Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GTE_Last_Completed_On__c</fullName>
        <inlineHelpText>The date/time that the last GTE review was completed for this application.</inlineHelpText>
        <label>GTE Last Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GTE_Risk_Rating__c</fullName>
        <description>Display GTE Risk Rating From Country Object</description>
        <formula>TEXT(Submission_Location_Country__r.GTE_Risk_Rating__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GTE Risk Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduate_Research_Application_Type__c</fullName>
        <description>Graduate Research Application Type</description>
        <label>Graduate Research Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admission application only</fullName>
                </value>
                <value>
                    <fullName>Admission and Scholarship</fullName>
                </value>
                <value>
                    <fullName>Scholarship application only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guardian_Email_Address__c</fullName>
        <description>Email Address of the Parent/Guardian.</description>
        <label>Guardian Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guardian_Full_Name__c</fullName>
        <description>Full Name of the Parent/Guardian for the applicant</description>
        <label>Guardian Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Phone_Number__c</fullName>
        <description>Parent/Guardian Phone Number</description>
        <label>Guardian Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Guardian_Relationship__c</fullName>
        <description>Relationship of the Parent/Guardian to the applicant.</description>
        <label>Guardian Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasDisabilities__c</fullName>
        <label>HasDisabilities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Unit_Prerequisite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to to determine if an application has been tagged to have a unit preference with a prerequisite.</description>
        <label>Has Unit Prerequisite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Embargoed__c</fullName>
        <description>Indicates if an application is embargoed - it is not concerned about the reason for the embargo</description>
        <formula>NOT(ISBLANK(Embargoed_Reason__c))</formula>
        <inlineHelpText>ACPs parented by this application are considered embargoed</inlineHelpText>
        <label>Is Embargoed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sponsored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Scholarship Applied For?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy_API__c</fullName>
        <description>To check whether the record was updated by the API or a user</description>
        <label>LastModifiedBy API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate_API__c</fullName>
        <description>Timestamp set by an external system (via API) in order to define when the record was updated. If this value is older then the current SystemModStamp of the record, then the Salesforce copy is regarded new and the updated is rejected, refer to ContactServices.rejectOutOfDateUpdate() trigger implementation.</description>
        <label>LastModifiedDate API</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Verified_Document_Received_Date__c</fullName>
        <description>The most recent date a document is received from a verified source.</description>
        <inlineHelpText>The most recent date a document is received from a verified source.</inlineHelpText>
        <label>Last Verified Document Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Application_ID__c</fullName>
        <label>Legacy Application ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Course_Offering_ID__c</fullName>
        <label>Legacy Course Offering ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Enquiry_ID__c</fullName>
        <label>Legacy Enquiry ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Submitted_Date__c</fullName>
        <label>Legacy Submitted Date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Malaysia_pass_expiry__c</fullName>
        <description>HDR malaysia pass expiry</description>
        <label>Malaysia pass expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Malaysia_pass_type__c</fullName>
        <description>HDR malaysia pass type</description>
        <label>Malaysia pass type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>STUDENT</fullName>
                    <label>Student</label>
                </value>
                <value>
                    <fullName>TOURIST</fullName>
                    <label>Tourist / Social Dependant</label>
                </value>
                <value>
                    <fullName>OTHER-MPT</fullName>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Malaysian_NRIC_Passport__c</fullName>
        <description>HDR Malaysia NRIC Passport</description>
        <label>Malaysian NRIC/Passport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Assessment_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be set if a user has selected to push the Application to Course Entry Check, when the Visa and/or Qualifications have been awaiting documents for greater than the configured time period.</description>
        <inlineHelpText>Course Entry Check entered with the Visa and/or Qualification tasks incomplete.</inlineHelpText>
        <label>Manual Assessment Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_health_prevent_visa__c</fullName>
        <description>Indicates if the applicant has any medical/health issues that may prevent them from obtaining a visa.</description>
        <inlineHelpText>Do you have any medical or health issues that may prevent you from obtaining your visa?</inlineHelpText>
        <label>Medical/health prevent visa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meets_Minimum_English__c</fullName>
        <description>User manually confirms if Application meets minimum English Check</description>
        <label>Meets Minimum English</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MyApp_User_Status__c</fullName>
        <description>Tracks the status of MyApp user provisioning for the applicant. Originally to track user provisioning for applications from Agent Portal, but can scale to other use cases as well</description>
        <inlineHelpText>In Progress - user provisioning job is in progress
Existing User - Applicant is an existing MyApp User. The user provisioning job will further check if they have all the necessary permissions
Provisioned - A new MyApp user was created for the Applicant
Pending Contact Merge - cannot create a User because a duplicate exists</inlineHelpText>
        <label>MyApp User Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Existing User</fullName>
                </value>
                <value>
                    <fullName>Provisioned</fullName>
                </value>
                <value>
                    <fullName>Pending Contact Merge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Of_Proxy__c</fullName>
        <label>Name Of Proxy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Profile_Name__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_Application_Date__c</fullName>
        <description>HDR permanent residency application date</description>
        <label>PR Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HDR parent application record for scholarship application only.</description>
        <label>Parent Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Callista_Application_Id__c</fullName>
        <description>HDR Parent application callista id for scholarship application only</description>
        <label>Parent Callista Application Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to link which agreement the application is relevant to for Partner Nominated Applications</description>
        <label>Partner Agreement</label>
        <referenceTo>Partner_Agreement__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Controlled_Timestamp__c</fullName>
        <description>Timestamp when the Partner sends the Application to student, relinquishing their control</description>
        <inlineHelpText>Timestamp when the Partner sends the Application to student, relinquishing their control</inlineHelpText>
        <label>Sent to student time stamp (MA Portal)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Controlled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field that determines if the application is being managed by the partner. The Applicant does not have access to this application yet.</description>
        <label>Partner Controlled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>Hosts the partner name nominated by the application primarily for study abroad and exchange applications. The partner name is used to link the application to the correct partner application record on submission.</description>
        <label>Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Privacy_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Privacy Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <description>To capture the passport number of the applicant</description>
        <label>Passport Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <description>Populated by the Callista inbound ACP processing</description>
        <label>Person ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_of_One_F__c</fullName>
        <description>Dummy field holding the value of 1 for each record to assist with reporting
    https://www.salesforce.com/video/296533/</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Teaching_Period__c</fullName>
        <description>Used to further filter the Course Offering results based on the Course Offering&apos;s Calendar Descriptio</description>
        <label>Preferred Teaching Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proceed_without_scholarship__c</fullName>
        <description>Proceed to application without scholarship</description>
        <label>Proceed without scholarship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protection_visa_in_any_country__c</fullName>
        <description>Indicates if the applicant has been issued a protection visa in any other country.</description>
        <inlineHelpText>Have you been issued a protection visa in any country to date?</inlineHelpText>
        <label>Protection visa in any country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proxy_Email_Address__c</fullName>
        <description>Email Address of the applicant&apos;s Proxy.</description>
        <label>Proxy Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Proxy_Relationship_to_you__c</fullName>
        <label>Proxy Relationship to you</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refused_entry_visa_to_any_country__c</fullName>
        <description>Indicates if the applicant has been refused an entry visa to any country.</description>
        <inlineHelpText>Have you been refused an entry visa to any country?</inlineHelpText>
        <label>Refused entry visa to any country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rerun_Initial_ACP_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers the initial ACP routing</description>
        <inlineHelpText>Triggers the initial ACP routing</inlineHelpText>
        <label>Rerun Initial ACP Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residency_Status__c</fullName>
        <description>Used to define the applicant&apos;s/applications residency status at the point in time of the application.</description>
        <inlineHelpText>Used to define the applicant&apos;s/applications residency status at the point in time of the application.</inlineHelpText>
        <label>Residency Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DOM-AUS</fullName>
                    <label>I am an Australian Citizen (with or without dual citizenship)</label>
                </value>
                <value>
                    <fullName>DOM-NZ</fullName>
                    <label>I am a New Zealand Citizen</label>
                </value>
                <value>
                    <fullName>DOM-SUN</fullName>
                    <label>I am a Malaysian Citizen or a Malaysian Permanent Resident (i.e. I hold a Malaysian PR visa)</label>
                </value>
                <value>
                    <fullName>DOM-PR</fullName>
                    <label>I am an Australian Permanent Resident (i.e. I hold an Australian PR visa)</label>
                </value>
                <value>
                    <fullName>DOM-SA</fullName>
                    <label>I am a South African Citizen</label>
                </value>
                <value>
                    <fullName>DOM-HV</fullName>
                    <label>I hold an Australian Permanent Humanitarian Visa</label>
                </value>
                <value>
                    <fullName>INTRNTNL</fullName>
                    <label>I hold or will be getting an Australian Student Visa</label>
                </value>
                <value>
                    <fullName>INT-TEP</fullName>
                    <label>I hold a non-student Australian Temporary Visa (e.g. spouse visa or work visa)</label>
                </value>
                <value>
                    <fullName>INT-SUN-P</fullName>
                    <label>I hold a Malaysian Student or Temporary Pass</label>
                </value>
                <value>
                    <fullName>INT-SUN</fullName>
                    <label>I will be getting a Malaysian Student or Temporary Pass</label>
                </value>
                <value>
                    <fullName>INT-SA</fullName>
                    <label>I hold or will be getting a South African Student/Study Visa</label>
                </value>
                <value>
                    <fullName>DOM-IDN</fullName>
                    <label>I am an Indonesian Citizen</label>
                </value>
                <value>
                    <fullName>DOM-IDN-PR</fullName>
                    <label>I am an Indonesian Permanent Resident</label>
                </value>
                <value>
                    <fullName>INT-IDN-P</fullName>
                    <label>I currently have a visa to study in Indonesia</label>
                </value>
                <value>
                    <fullName>INT-IDN</fullName>
                    <label>I will be getting a visa to study in Indonesia</label>
                </value>
                <value>
                    <fullName>&lt;IMG SRC=&quot;javascript:alert(&apos;XSS&apos;);&quot;&gt;</fullName>
                    <isActive>false</isActive>
                    <label>&lt;IMG SRC=&quot;javascript:alert(&apos;XSS&apos;);&quot;&gt;</label>
                </value>
                <value>
                    <fullName>https://myapp.monash.edu/admissions/a244a000000SH9A/</fullName>
                    <isActive>false</isActive>
                    <label>https://myapp.monash.edu/admissions/a244a000000SH9A/</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residency_Sub_status__c</fullName>
        <description>Used to define whether the applicant&apos;s/applications hold or intending to get an Australian Visa at the point in time of the application.</description>
        <inlineHelpText>Used to define whether the applicant&apos;s/applications hold or intending to get an Australian Visa at the point in time of the application.</inlineHelpText>
        <label>Residency Sub status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Residency_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INTRNTNL.A</fullName>
                    <label>I hold an Australian Student Visa</label>
                </value>
                <value>
                    <fullName>INTRNTNL.B</fullName>
                    <label>I will be getting an Australian Student Visa</label>
                </value>
                <value>
                    <fullName>INTRNTNL.O</fullName>
                    <label>I am an international citizen applying to study online, who will be studying remotely from my home country.</label>
                </value>
                <value>
                    <fullName>DOM-SUN.A</fullName>
                    <label>I am a Malaysian citizen</label>
                </value>
                <value>
                    <fullName>DOM-SUN.B</fullName>
                    <label>I am a Malaysian Permanent Resident (i.e. I hold a Malaysian PR visa)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scholarship_Round_Description__c</fullName>
        <description>HDR hidden field to store scholarship round description.</description>
        <label>Scholarship Round Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_student_for_review_Timestamp__c</fullName>
        <description>AgentPortal : Date and Time the application was sent to the applicant.</description>
        <inlineHelpText>Date and Time the application was sent to the applicant</inlineHelpText>
        <label>Sent to student for review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Single_Entry_Visa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be captured only from AgentPortal to indicate the country that issued Single Entry Visa for Malaysian residency status INT-SUN-P</description>
        <label>Single Entry Visa</label>
        <referenceTo>Country_Attribute__c</referenceTo>
        <relationshipLabel>Applications (Single Entry Visa)</relationshipLabel>
        <relationshipName>Single_Entry_Visa_Issued_Country</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Email_Address__c</fullName>
        <description>Email Address of the applicant&apos;s Sponsor.</description>
        <label>Sponsor Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sponsor_Name__c</fullName>
        <label>Name of Sponsorship/Proxy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Scholarship_organisation__c</fullName>
        <label>Sponsor Organisation/Proxy Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Status__c</fullName>
        <label>Status of External Scholarship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>--Select--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsorship_Type__c</fullName>
        <description>Used to define the proxy type which has been selected by the applicant</description>
        <inlineHelpText>Used to define the proxy type which has been selected by the applicant</inlineHelpText>
        <label>Sponsorship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sponsorship</fullName>
                    <label>Yes, I have applied for or will be receiving a sponsorship/scholarship</label>
                </value>
                <value>
                    <fullName>Proxy</fullName>
                    <label>Yes, I would like to nominate a proxy for my application</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No, I don’t have a sponsor or a proxy</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Sent for Submission</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Registered - Not paid</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Data Validation Ready</fullName>
                </value>
                <value>
                    <fullName>Failed Data validation</fullName>
                </value>
                <value>
                    <fullName>Submission on Hold (Duplicate Contact)</fullName>
                </value>
                <value>
                    <fullName>Agent Declaration Accepted</fullName>
                </value>
                <value>
                    <fullName>Sent Draft Application to Applicant</fullName>
                </value>
                <value>
                    <fullName>Applicant Declaration Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Accepted_Timestamp__c</fullName>
        <description>AgentPortal : Date and Time the application was accepted by applicant</description>
        <label>Student Accepted (Agent Portal)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Student_Pass_Availability__c</fullName>
        <description>Indicates if the applicant had obtained a student pass in Malaysia before.</description>
        <inlineHelpText>Have you obtained a student pass in Malaysia before?</inlineHelpText>
        <label>Student Pass Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Location_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the country for the submission location of the application</description>
        <label>Submission Location Country</label>
        <referenceTo>Country_Attribute__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>